# execdir

./: README.md  package.json  setup.cfg
tests/execdir/examples/: add.sh  get.sh  rm.sh  run.sh  set.sh
