# https://pypi.org/project/setupcfg-generator/
[metadata]
name = execdir
version = 2019.3.22
url = https://github.com/looking-for-a-job/execdir
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = execdir

[options]
install_requires = 
	setuptools
scripts = 
	scripts/.execdir-add
	scripts/.execdir-clear
	scripts/.execdir-get
	scripts/.execdir-rm
	scripts/.execdir-run
	scripts/.execdir-set
	scripts/execdir
